<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="hello_world">More concise, more unique</string>

    <!-- txApplication -->
    <string name="copy_success">copy success</string>

    <!-- settings -->
    <string name="summary">must*</string>
    <string name="anim">Windows animation</string>
    <string name="theme">Application theme</string>
    <string name="lock">Application locker</string>

    <!-- about -->
    <string name="txh_version">tx-Contacts 1.0</string>
    <string name="about_txh">powered by bbs.ijustyce.com</string>

    <!-- feedback -->
    <string name="submit">submit</string>
    <string name="contact">contact</string>
    <string name="msg">content</string>
    <string name="dialog_title">please wait</string>
    <string name="dialog_content">please wait some seconds…</string>
    <string name="error_feedback">input can not be empty</string>

    <!-- baseclass -->
    <string name="sign_fail">Not the original software,remove is needed.</string>

    <!-- password -->
    <string name="hint">please input your password</string>
    <string name="ok">OK</string>
    <string name="del">delete</string>
    <string name="pw_success">success</string>
    <string name="pw_error">error</string>
    <string name="pw_wait">Error than 3 times , exit application</string>
    <string name="pw_set">please set your password</string>
    <string name="pass_hint">plase remember your gesture</string>
    <string name="pass_info">please unlock</string>
    <string name="pass_first">draw your gesture</string>
    <string name="pass_affirm">affirm your gesture</string>
    <string name="pass_affirm_error">inconformity</string>
    <string name="pass_short">password to short</string>

    <!-- MainActivity -->
    <string name="favorite">Favorite</string>
    <string name="secret">Secret</string>
    <string name="MinXian">MinXian</string>
    <string name="HangZhou">HangZhou</string>
    <string name="other">Other</string>
    <string name="relative">Relative</string>
    <string name="feedback">FeedBack</string>
    <string name="about">About</string>
    <string name="more">Backup\nRestore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>

    <!-- list -->
    <string name="AddPrson">Add To List</string>
    <string name="name">name:</string>
    <string name="phone">phone:</string>
    
    <!-- list列表弹出菜单 -->
    <string name="call">call</string>
    <string name="sms">message</string>
    <string name="copy">copy</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    
    <!-- backup和restore -->
    <string name="warn">This perhaps delete old file!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- 异常信息 -->
    <string name="error_fileNotFound">Source file not found.</string>

    <!-- 以下是自定义的颜色 -->

    <color name="bkcolor">#33CCFF</color>

    <drawable name="newmessage">#FFF</drawable>

</resources>