<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="24sp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="24sp" />

    <Button
        android:id="@+id/ok"
        android:layout_marginTop="48sp"
        android:layout_below="@id/phone"
        android:layout_width="fill_parent"
        android:layout_height="48sp"
        android:background="#33CCFF"
        android:onClick="btClick"
        android:text="@string/ok" />

</RelativeLayout>