<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/backup"
        android:width="120dp" />

    <Button
        android:id="@+id/restore"
        android:layout_below="@id/backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/restore"
        android:width="120dp" />

    <Button
        android:id="@+id/about"
        android:layout_below="@id/restore"
        android:layout_marginTop="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:background="#33CCFF"
        android:height="100dp"
        android:onClick="btClick"
        android:text="@string/about"
        android:width="120dp" />

</RelativeLayout>